fix overflow issues

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -41,6 +41,10 @@
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body,
 html {
   color: #000000;
